# almond

./: .gitignore  AGENTS.md  README.md
almond-app/Almond/: AlmondApp.swift  ContentView.swift  Info.plist
almond-app/Almond.xcodeproj/: project.pbxproj
almond-app/Almond/Assets.xcassets/AccentColor.colorset/: Contents.json
almond-app/Almond/Assets.xcassets/AlmondMark.imageset/: Contents.json
almond-app/Almond/Assets.xcassets/AlmondWordmark.imageset/: Contents.json
almond-app/Almond/Assets.xcassets/AppIcon.appiconset/: Contents.json
almond-app/Almond/Auth/: AuthManager.swift  KeychainHelper.swift  SignInWithAppleView.swift  WelcomeView.swift
almond-app/Almond/Dashboard/: APIRiskViewModel.swift  DashboardView.swift  DashboardViewModel.swift  HistoryChartView.swift  ProfileView.swift  RecommendationView.swift  RiskDashboardView.swift  ScoresView.swift
almond-app/Almond/Design/: Color+Almond.swift  Font+Almond.swift
almond-app/Almond/HealthKit/: BackgroundSync.swift  HealthKitManager.swift
almond-app/Almond/Networking/: APIClient.swift  APIModels.swift  MongoDBConfig.swift
almond-app/Almond/Onboarding/: HealthQuestionnaireView.swift  OnboardingView.swift  OnboardingViewModel.swift  SplashView.swift
almond-app/Almond/Onboarding/Components/: OnboardingHeader.swift  OnboardingNextButton.swift  OnboardingPageDots.swift  OnboardingTagline.swift
almond-app/Almond/Onboarding/Pages/: OnboardingPage1View.swift  OnboardingPage2View.swift  OnboardingPage3View.swift  OnboardingPage4View.swift
almond-dashboard/: .gitignore  design.md  package.json  pnpm-lock.yaml
almond-dashboard/src/app/: globals.css  layout.tsx  page.tsx
almond-dashboard/src/components/: Card.tsx  ClinicalNotesPanel.tsx  HeroVitality.tsx  RiskEquationsPanel.tsx  SiteHeader.tsx  Sparkline.tsx  TopDriversPanel.tsx  VitalityTimeline.tsx  Wordmark.tsx
almond-dashboard/src/lib/: api.ts  cn.ts  derive.ts  fixtures.ts  format.ts  patient.ts
almond-ml/: .env.example  .gitignore  README.md  auth.py  db.py  gemma.py  main.py  ml.py  pyproject.toml  risk_equations.py  schemas.py  stress_grid.py  test_input.json  test_input_full.json
almond-ml/routes/: __init__.py  auth_routes.py  healthkit_routes.py  input_routes.py  onboarding_routes.py  worker_routes.py
almond-ml/tests/: conftest.py  test_augmentation.py  test_auth.py  test_healthkit.py  test_input.py  test_ml.py  test_onboarding.py  test_risk_equations.py  test_worker.py
inspect/: 01a_download.py  01b_cohort.py  01c_features.py  01d_train.py  02_gemini.py  03_seed.py  04_worker.py  05_percentiles.py  06_api.py  inspect_nhanes.ipynb  stress_test.py  stress_test_results.csv
inspect/models/: cox_model.pkl  feature_means.json  percentile_lookup.json  validation_report.json
(+34 files in other folders)
