[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "almond-ml"
version = "0.2.0"
description = "almond sync ML pipeline backend — POST /input runs Cox + Gemma and persists to MongoDB"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    # HTTP layer.
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2",
    "python-multipart",
    "python-dotenv>=1.0",

    # Mongo layer (motor was deprecated 14 May 2026).
    "pymongo>=4.13",
    "dnspython>=2.6",
    "beanie>=2.1",

    # ML layer — load + predict from the trained Cox pkl.
    "scikit-survival>=0.27",
    "scikit-learn>=1.8,<1.9",
    "numpy>=2.4",
    "pandas>=3.0",
    "scipy>=1.17",
    "joblib>=1.5",

    # LLM layer — Gemma 3 27B via Google's GenAI SDK.
    "google-genai>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9",
    "pytest-asyncio>=1.0",
    "mongomock-motor",
    "httpx",        # FastAPI TestClient backend
]

[tool.setuptools]
py-modules = ["main", "schemas", "db", "ml", "gemma"]
packages = ["routes"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q -ra"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
